Added Computer Talk languages

--- a/index.html
+++ b/index.html
@@ -63,6 +63,9 @@
                 <h3>Software Developer</h3>
                 Computer Talk | Markham, ON | 2014 - present
                 <ul>
+				    <li>
+                        Development in C# with .NET Framework, WPF, WCF, and Entity Framework
+                    </li>
                     <li>
                         Implemented and maintained SMS and Social Media Services using Twilio, Facebook, Twitter and Sunshine APIs.
                     </li>
