Updated Computer Talk descriptions

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE HTML>
+<!DOCTYPE HTML>
 <html>
 <head>
     <title>Sylvain Loranger Resumé</title>
@@ -64,10 +64,10 @@
                 Computer Talk | Markham, ON | 2014 - present
                 <ul>
 				    <li>
-                        Development in C# with .NET Framework, WPF, WCF, and Entity Framework
+                        Developed and implemented software solutions using C# and .NET Framework, including WPF, WCF, and Entity Framework
                     </li>
                     <li>
-                        Implemented and maintained SMS and Social Media Services using Twilio, Facebook, Twitter and Sunshine APIs.
+                        Lead developer for SMS and Social Media Services using Twilio, Facebook, Twitter and Sunshine APIs.
                     </li>
                     <li>
                         Maintained and added new features for internal logging tool. Optimized tool for memory and CPU usage.
@@ -111,6 +111,5 @@
             </td>
         </tr>
     </table>
-
 </body>
 </html>
