--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
-    <table width="1150" cellspacing="5" cellpadding="20" >
+    <table width="1100" cellspacing="5" cellpadding="20" >
         <tr>
             <td width="35%" bgcolor="#ccccff">
                 <h1>Sylvain Loranger</h1>
@@ -28,7 +28,7 @@
                 <h3>Languages</h3>
                 C#, Java, HTML, CSS, Javascript
                 <h3> Technologies</h3>
-                .NET, WPF, WCF, Entity Framework
+                .NET, WPF, WCF, Entity Framework, Xamarin
                 <h3> Tools</h3>
                 Visual Studio, Eclipse, Android Studio, Microsoft SQL Server, Git, SVN, Microsoft Office
                 <h3>Personal Projects</h3>
