--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <td bgcolor="#eeeeff" valign="top">
                 <h2>WORK EXPERIENCE</h2>
                 <h3>Software Developer</h3>
-                Computer Talk | Markham, ON | 2014 - present
+                Computer Talk | Markham, ON | 2014 - 2023
                 <ul>
 				    <li>
                         Developed and implemented software solutions using C# and .NET Framework, including WPF, WCF, and Entity Framework
